fixed spacing between badges on badge panel and added text breaks

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -238,6 +238,7 @@ h1, h2, h3, h4, h5, h6
 }
 .bold-caption {
     font-weight: bold;
+    
 }
 
 .badge-locked {
@@ -413,7 +414,7 @@ h1, h2, h3, h4, h5, h6
 }
 .badge-white-bg-rounded {
     background: white;
-    border-radius: 30px;
+    border-radius: 15px;
     
 }
 
